--- a/meteocal-project/meteocal-project-war/web/protected/personal/ManageInvitations.xhtml
+++ b/meteocal-project/meteocal-project-war/web/protected/personal/ManageInvitations.xhtml
@@ -10,7 +10,7 @@ and open the template in the editor.
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:p="http://primefaces.org/ui">
     <h:head>
-        <title>Events Management</title>
+        <title>Invitation Management</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </h:head>
     <body>
