--- a/meteocal-project/meteocal-project-war/web/protected/event/EventSuggestedChange.xhtml
+++ b/meteocal-project/meteocal-project-war/web/protected/event/EventSuggestedChange.xhtml
@@ -5,12 +5,18 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-    <head>
-        <title>TODO supply a title</title>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:p="http://primefaces.org/ui">
+    <h:head>
+        <title>Event Suggestions</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    </head>
+    </h:head>
     <body>
-        <div>TODO write content</div>
+        <div id="header">
+            <ui:include src="/Components/TopBar.xhtml"></ui:include>
+        </div>
     </body>
 </html>
+
