--- a/meteocal-project/meteocal-project-war/web/Error.xhtml
+++ b/meteocal-project/meteocal-project-war/web/Error.xhtml
@@ -5,12 +5,17 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-    <head>
-        <title>TODO supply a title</title>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:p="http://primefaces.org/ui">
+    <h:head>
+        <title>Error Page</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    </head>
+    </h:head>
     <body>
-        <div>ERROR PAGE</div>
+        <div id="header">
+            ERROR PAGE
+        </div>
     </body>
 </html>
