--- a/meteocal-project/meteocal-project-war/web/protected/personal/Settings.xhtml
+++ b/meteocal-project/meteocal-project-war/web/protected/personal/Settings.xhtml
@@ -8,6 +8,7 @@ and open the template in the editor.
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:f="http://java.sun.com/jsf/core"
       xmlns:p="http://primefaces.org/ui">
     <h:head>
         <title>Settings View</title>
@@ -16,6 +17,29 @@ and open the template in the editor.
     <body>
         <div id="header">
             <ui:include src="/Components/TopBar.xhtml"></ui:include>
+        </div>
+        <div id="main">
+            <h:form id="form">
+                <p:panelGrid columns="2">
+
+                    <h:outputText value="Username:" />
+                    <h:outputText value="#{settingsBean.username}" />
+
+                    <h:outputText value="Mail:" />
+                    <h:outputText value="#{settingsBean.email}" />
+
+                    <h:outputText value="Privacy Mod:" />
+                    <h:outputText value="#{settingsBean.privacyMod}" />
+                    
+                    <p:row>
+                        <p:column colspan="2">
+                            <p:commandButton value="edit" action="/protected/personal/SettingsEdit" type="submit">
+                            </p:commandButton>
+                        </p:column>
+                    </p:row>
+                </p:panelGrid>
+                
+            </h:form>
         </div>
     </body>
 </html>
