Beans:  Event creation and editing 	Settings editing
Pages: Event <create,edit,page,pageCreator> 
           Home calendar Monthly view 
           Settings<view,edit> pages

--- a/meteocal-project/meteocal-project-war/web/protected/event/EventPageNoVisibility.xhtml
+++ b/meteocal-project/meteocal-project-war/web/protected/event/EventPageNoVisibility.xhtml
@@ -16,6 +16,8 @@ and open the template in the editor.
     <body>
         <div id="header">
             <ui:include src="/Components/TopBar.xhtml"></ui:include>
+            <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" binding="#{exceptionBean.noVisibility}"/>
+            
         </div>
     </body>
 </html>
