--- a/meteocal-project/meteocal-project-war/web/protected/personal/Settings.xhtml
+++ b/meteocal-project/meteocal-project-war/web/protected/personal/Settings.xhtml
@@ -33,8 +33,7 @@ and open the template in the editor.
                     
                     <p:row>
                         <p:column colspan="2">
-                            <p:commandButton value="edit" action="/protected/personal/SettingsEdit" type="submit">
-                            </p:commandButton>
+                            <p:commandButton value="edit" action="/protected/personal/SettingsEdit" type="submit" ajax="false" styleClass="block"/>
                         </p:column>
                     </p:row>
                 </p:panelGrid>
