--- a/meteocal-project/meteocal-project-war/web/protected/event/EventPageCreator.xhtml
+++ b/meteocal-project/meteocal-project-war/web/protected/event/EventPageCreator.xhtml
@@ -17,5 +17,49 @@ and open the template in the editor.
         <div id="header">
             <ui:include src="/Components/TopBar.xhtml"></ui:include>
         </div>
+        <p:fieldset legend="Your Event " toggleable="true" toggleSpeed="500">
+            <p:ajax event="toggle" />
+            <h:panelGrid columns="2" cellpadding="5">
+                <h:outputText value="Here there are all the available informations as far as an event concerns. ">
+                </h:outputText>
+                <br/>
+                <br/>
+                <h:form id="form">
+                    <h:panelGrid columns="2">
+                        <h:outputText value="ID" />
+                        <h:outputText value="num" />
+
+                        <h:outputText value="Name" />
+                        <h:outputText value="nome" />
+
+                        <h:outputText value="Address" />
+                        <h:outputText value="road ... , n" />
+
+                        <h:outputText value="City" />
+                        <h:outputText value="città" />
+
+                        <h:outputText value="Country" />
+                        <h:outputText value="paese" />
+
+                        <h:outputText value="Dwscription" />
+                        <h:outputText value="testo descrittivo" />
+
+                        <h:outputText value="Indoor" />
+                        <h:outputText value="Y/N" />
+
+                        <h:outputText value="Private" />
+                        <h:outputText value="Y/N" />
+
+                        <p:commandButton value="Edit" icon="ui-icon-check" action="/protected/event/EventEdit"/>
+
+
+                    </h:panelGrid>
+                </h:form>
+            </h:panelGrid>
+        </p:fieldset>
+        <p:fieldset>
+            <p:inputText value="Participants"></p:inputText>
+            <p:commandButton action="" value="add Participant"></p:commandButton>
+        </p:fieldset>
     </body>
 </html>
