--- a/meteocal-project/meteocal-project-war/web/protected/personal/HomeCalendarDay.xhtml
+++ b/meteocal-project/meteocal-project-war/web/protected/personal/HomeCalendarDay.xhtml
@@ -8,14 +8,16 @@ and open the template in the editor.
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
         <title>HomeCalendar | Daily </title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </h:head>
     <body>
-        <div id="header">
+        <!--<div id="header">
             <ui:include src="/Components/TopBar.xhtml"></ui:include>
-        </div>
+        </div>-->
+
     </body>
 </html>
