--- a/meteocal-project/meteocal-project-war/web/protected/personal/HomeCalendarMonth.xhtml
+++ b/meteocal-project/meteocal-project-war/web/protected/personal/HomeCalendarMonth.xhtml
@@ -7,15 +7,208 @@ and open the template in the editor.
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:p="http://primefaces.org/ui">
     <h:head>
         <title>Home Calendar | Monthly</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+	<link type="text/css" rel="stylesheet"
+		href="#{request.contextPath}/Resources/css/style.css" />
     </h:head>
     <body>
         <div id="header">
             <ui:include src="/Components/TopBar.xhtml"></ui:include>
         </div>
+        <p:panelGrid id="container" style="margin-top:20px">
+            <f:facet name="header">
+                <p:row>
+                    <p:column class="tableHead">
+                        Monday
+                    </p:column>
+
+                    <p:column class="tableHead">
+                        Tuesday
+                    </p:column>
+
+                    <p:column class="tableHead">
+                        Wednsday
+                    </p:column>
+
+                    <p:column class="tableHead">
+                        Thursday
+                    </p:column>
+
+                    <p:column class="tableHead">
+                        Friday
+                    </p:column>
+
+                    <p:column class="tableHead">
+                        Saturday
+                    </p:column>
+
+                    <p:column class="tableHead">
+                        Sunday
+                    </p:column>
+                </p:row>
+            </f:facet>
+            
+            <p:row>
+                <p:column class="cell">
+                    <p:panelGrid>
+                        <p:row>
+                            <p:column>
+                                Monday
+                            </p:column>
+                        </p:row>
+                        <p:row>
+                            <p:column>
+                                Previou
+                            </p:column>
+                        </p:row>
+                    </p:panelGrid>
+                </p:column>
+
+                <p:column class="cell">
+                    Monday
+                </p:column>
+
+                <p:column class="cell">
+                    Monday
+                </p:column>
+
+                <p:column class="cell">
+                    Monday
+                </p:column>
+
+                <p:column class="cell">
+                    Monday
+                </p:column>
+
+                <p:column class="cell">
+                    Monday
+                </p:column>
+
+                <p:column class="cell">
+                    Monday
+                </p:column>
+            </p:row>
+            <p:row>
+                <p:column class="cell">
+                    Tuesday
+                </p:column>
+
+                <p:column class="cell">
+                    Tuesday
+                </p:column>
+
+                <p:column class="cell">
+                    Tuesday
+                </p:column>
+
+                <p:column class="cell">
+                    Tuesday
+                </p:column>
+
+                <p:column class="cell">
+                    Tuesday
+                </p:column>
+
+                <p:column class="cell">
+                    Tuesday
+                </p:column>
+
+                <p:column class="cell">
+                    Tuesday
+                </p:column>
+            </p:row>
+            <p:row>
+                <p:column class="cell">
+                    Wednsday
+                </p:column>
+
+                <p:column class="cell">
+                    Wednsday
+                </p:column>
+
+                <p:column class="cell">
+                    Wednsday
+                </p:column>
+
+                <p:column class="cell">
+                    Wednsday
+                </p:column>
+
+                <p:column class="cell">
+                    Wednsday
+                </p:column>
+
+                <p:column class="cell">
+                    Wednsday
+                </p:column>
+
+                <p:column class="cell">
+                    Wednsday
+                </p:column>
+            </p:row>
+            <p:row>
+                <p:column class="cell">
+                    Thursday
+                </p:column>
+
+                <p:column class="cell">
+                    Thursday
+                </p:column>
+
+                <p:column class="cell">
+                    Thursday
+                </p:column>
+
+                <p:column class="cell">
+                    Thursday
+                </p:column>
+
+                <p:column class="cell">
+                    Thursday
+                </p:column>
+
+                <p:column class="cell">
+                    Thursday
+                </p:column>
+
+                <p:column class="cell">
+                    Thursday
+                </p:column>
+            </p:row>
+            <p:row>
+                <p:column class="cell">
+                    Friday
+                </p:column>
+
+                <p:column class="cell">
+                    Friday
+                </p:column>
+
+                <p:column class="cell">
+                    Friday
+                </p:column>
+
+                <p:column class="cell">
+                    Friday
+                </p:column>
+
+                <p:column class="cell">
+                    Friday
+                </p:column>
+
+                <p:column class="cell">
+                    Friday
+                </p:column>
+
+                <p:column class="cell">
+                    Friday
+                </p:column>
+            </p:row>
+        </p:panelGrid>
     </body>
 </html>
