--- a/meteocal-project/meteocal-project-war/web/protected/personal/SettingsEdit.xhtml
+++ b/meteocal-project/meteocal-project-war/web/protected/personal/SettingsEdit.xhtml
@@ -20,14 +20,14 @@ and open the template in the editor.
         </div>
         
         <h:form>
-            <p:panel id="privacyPanel" header="Settings Editing" footer="Editing form" style="margin-top:70px" class="panelForm">     
+            <p:panel id="privacyPanel" header="Changing Calendar Visibility Setting" footer="Editing form" style="margin-top:70px" class="panelForm">     
                 <h:panelGrid columns="2" style="margin-bottom:10px" cellpadding="5" id="settingEdit">
-                    <h:outputText value="Public Mode: " />
-                    <p:selectOneButton value="#{settingsEditingBean.privacyMod}">
-                    <f:selectItem itemLabel="Public" itemValue="public" />
-                    <f:selectItem itemLabel="Private" itemValue="private" />
+                    <h:outputText value="Calendar Visibility: " />
+                    <p:selectOneButton value="#{settingsEditingBean.calendarVisibility}">
+                    <f:selectItem itemLabel="Visible" itemValue="true" />
+                    <f:selectItem itemLabel="Hidden" itemValue="false" />
                     </p:selectOneButton>
-                    <p:commandButton value="Save" icon="ui-icon-check" />
+                    <p:commandButton value="Save" icon="ui-icon-check" action="#{settingsEditingBean.saveCalendarVisibility()}"/>
                 </h:panelGrid>
             </p:panel>
             <p:panel id="passwordPanel" header="Settings Editing" footer="Editing form" style="margin-top:30px" class="panelForm">     
@@ -41,7 +41,7 @@ and open the template in the editor.
                     <h:outputText value="New Password: " />
                     <p:password id="newPassword" value="#{settingsEditingBean.newPassword}" />
                     
-                    <p:commandButton value="Save" icon="ui-icon-check" />
+                    <p:commandButton value="Save" icon="ui-icon-check" action="#{settingsEditingBean.saveAccountInformation()}"/>
                 </h:panelGrid>
             </p:panel>
         </h:form>
