Beans:  Cache Dictionary AutoCompleter and SettingsEditingBean
Pages: Index,SettingsEdit

--- a/maven/meteocal/meteocal-web/src/main/webapp/Index.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/Index.xhtml
@@ -8,9 +8,9 @@
         <title>MeteoCal Registration</title>
         <style>
             .panelForm{
-                width: 40%;
+                width: 48%;
                 height: 300px;
-                margin: 30px;
+                margin: 1%;
                 float: left;
             }
         </style>
@@ -20,13 +20,14 @@
             <p:panel id="registrationPanel" header="First Option - Registration" footer="Registration form" style="margin-bottom:20px" class="panelForm">
                 <h:panelGrid columns="2" id="registrationGrid">
                     <p:outputLabel value="Username" for="userRegistration" />
-                    <p:autoComplete id="userRegistration" value="#{registrationBean.user.username}" />
+                    <p:autoComplete id="userRegistration" value="#{registrationBean.user.username}" completeMethod="#{autoCompleter.completeText}" />
                     <p:outputLabel value="Password" for="passwordRegistration"/>
-                    <p:password id="passwordRegistration" value="#{registrationBean.user.password}" />
+                    <p:password id="passwordRegistration" value="#{registrationBean.user.password}" feedback="true" />
                     <p:outputLabel value="Password Confirmation" for="passwordConfirmation"/>
-                    <p:password id="passwordConfirmation" value="#{registrationBean.passwordConfirmation}" />
-                    <p:commandButton action="#{registrationBean.register()}" value="Signup" type="submit" ajax="false" styleClass="block" />
-		</h:panelGrid>
+                    <p:password id="passwordConfirmation" value="#{registrationBean.passwordConfirmation}" match="passwordRegistration" />
+                    <p:commandButton action="#{registrationBean.register()}" value="Signup" type="submit" ajax="false" styleClass="block"  />
+                    <p:messages id="messagesRegistration" showDetail="true" autoUpdate="true" closable="true" />
+                </h:panelGrid>
             </p:panel>
 	</h:form> 
         
@@ -34,10 +35,11 @@
             <p:panel id="loginPanel" header="Second Option - Login" footer="Login form" style="margin-bottom:20px"  class="panelForm">
                 <h:panelGrid columns="2" id="loginGrid">
                     <p:outputLabel value="Username" for="userLogin" />
-                    <p:autoComplete id="userLogin" value="#{loginBean.name}" />
+                    <p:autoComplete id="userLogin" value="#{loginBean.name}" completeMethod="#{autoCompleter.completeText}" />
                     <p:outputLabel value="Password" for="pswLog"/>
                     <p:password id="pswLog" value="#{loginBean.password}" />
                     <p:commandButton action="#{loginBean.login()}" value="Login" type="submit" ajax="false" styleClass="block" />
+                    <p:messages id="messagesLogin" showDetail="true" autoUpdate="true" closable="true" />
                 </h:panelGrid>
             </p:panel>
         </h:form>
