--- a/maven/meteocal/meteocal-web/src/main/webapp/Error.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/Error.xhtml
@@ -15,7 +15,9 @@ and open the template in the editor.
     </h:head>
     <body>
         <div id="header">
-            ERROR PAGE
+            <p:message severity="fatal">
+                An error occured, please contact the system admins.
+            </p:message>
         </div>
     </body>
 </html>
