Never stop! ahah A working filter that anticipate the FacesServlet made throw a bean

--- a/maven/meteocal/meteocal-web/src/main/webapp/Index.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/Index.xhtml
@@ -14,6 +14,12 @@
                 float: left;
             }
         </style>
+        <link rel="stylesheet" href="%PATH%/jquery-ui.css" />  
+        <link rel="stylesheet" href="%PATH%/theme.css" />  
+        <link rel="stylesheet" href="%PATH%/prime-ui-min.css" />  
+        <script type="text/javascript" src="%PATH%/jquery.js"></script>  
+        <script type="text/javascript" src="%PATH%/jquery-ui.js"></script>  
+        <script type="text/javascript" src="%PATH%/prime-ui.js"></script>  
     </h:head>
     <h:body>
     	<h:form>
