--- a/maven/meteocal/meteocal-web/src/main/webapp/protected/testNavigation2.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/protected/testNavigation2.xhtml
@@ -5,12 +5,17 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-    <head>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:f="http://java.sun.com/jsf/core">
+    <h:head>
         <title>TODO supply a title</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    </head>
-    <body>
-        <div>testNavigation2</div>
-    </body>
+    </h:head>
+    <h:body>
+        <f:event listener="#{filterBean.isAdmin}" type="preRenderView" />
+        <h1>HELLO WORLD</h1>
+        <ui:include src="/Components/TopBar.xhtml"></ui:include>
+    </h:body>
 </html>
