--- a/maven/meteocal/meteocal-web/src/main/webapp/protected/event/EventPageNoVisibility.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/protected/event/EventPageNoVisibility.xhtml
@@ -6,6 +6,7 @@ and open the template in the editor.
 -->
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:f="http://java.sun.com/jsf/core"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:p="http://primefaces.org/ui">
@@ -14,10 +15,10 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </h:head>
     <body>
+        <f:event listener="#{filterEventNoVisibility.check}" type="preRenderView" />
         <div id="header">
             <ui:include src="/Components/TopBar.xhtml"></ui:include>
-            <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" binding="#{exceptionBean.noVisibility}"/>
-            
+            <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" binding="#{exceptionBean.noVisibility}"/>     
         </div>
     </body>
 </html>
