--- a/maven/meteocal/meteocal-web/src/main/webapp/Index.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/Index.xhtml
@@ -2,7 +2,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:p="http://primefaces.org/ui">
     <h:head>
         <title>MeteoCal Registration</title>
@@ -26,7 +25,7 @@
             <p:panel id="registrationPanel" header="First Option - Registration" footer="Registration form" style="margin-bottom:20px" class="panelForm">
                 <h:panelGrid columns="2" id="registrationGrid">
                     <p:outputLabel value="Username" for="userRegistration" />
-                    <p:autoComplete id="userRegistration" value="#{registrationBean.user.username}" completeMethod="#{autoCompleter.completeText}" />
+                    <p:inputText id="userRegistration" value="#{registrationBean.user.username}" />
                     <p:outputLabel value="Password" for="passwordRegistration"/>
                     <p:password id="passwordRegistration" value="#{registrationBean.user.password}" feedback="true" />
                     <p:outputLabel value="Password Confirmation" for="passwordConfirmation"/>
@@ -41,7 +40,7 @@
             <p:panel id="loginPanel" header="Second Option - Login" footer="Login form" style="margin-bottom:20px"  class="panelForm">
                 <h:panelGrid columns="2" id="loginGrid">
                     <p:outputLabel value="Username" for="userLogin" />
-                    <p:autoComplete id="userLogin" value="#{loginBean.name}" completeMethod="#{autoCompleter.completeText}" />
+                    <p:inputText id="userLogin" value="#{loginBean.name}" />
                     <p:outputLabel value="Password" for="pswLog"/>
                     <p:password id="pswLog" value="#{loginBean.password}" />
                     <p:commandButton action="#{loginBean.login()}" value="Login" type="submit" ajax="false" styleClass="block" />
