SYSO for testing Fixing a bug in the pageCreator filter

--- a/maven/meteocal/meteocal-web/src/main/webapp/protected/event/EventPageCreator.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/protected/event/EventPageCreator.xhtml
@@ -60,8 +60,10 @@ and open the template in the editor.
             </h:panelGrid>
         </p:fieldset>
         <p:fieldset>
-            <p:inputText value="Participants"></p:inputText>
-            <p:commandButton action="#{eventCreatorBean.addParticipant}" value="add Participant"></p:commandButton>
+            <h:form>
+                <p:inputText value="Participants"></p:inputText>
+                <p:commandButton action="#{eventCreatorBean.addParticipant}" value="add Participant"></p:commandButton>
+            </h:form>
         </p:fieldset>
     </body>
 </html>
