--- a/maven/meteocal/meteocal-web/src/main/webapp/WEB-INF/HiddenPages/EventPageCreator.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/WEB-INF/HiddenPages/EventPageCreator.xhtml
@@ -14,8 +14,9 @@ and open the template in the editor.
         <title>My Event</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </h:head>
+
     <body>
-        <!--<f:event listener="{filterEventCreator.check}" type="preRenderView" />-->
+        <f:event listener="{filterEventCreator.check}" type="preRenderView" />
         <div id="header">
             <ui:include src="/Components/TopBar.xhtml"></ui:include>
         </div>
@@ -62,8 +63,10 @@ and open the template in the editor.
         <p:fieldset>
             <h:form>
                 <p:inputText value="Participants"></p:inputText>
-                <p:commandButton action="#{eventCreatorBean.addParticipant}" value="add Participant"></p:commandButton>
+                <p:commandButton action="#{eventCreatorBean.addParticipant}" value="add 
+                                 Participant"></p:commandButton>
             </h:form>
         </p:fieldset>
     </body>
+
 </html>
