--- a/maven/meteocal/meteocal-web/src/main/webapp/protected/event/EventPageNoVisibility.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/protected/event/EventPageNoVisibility.xhtml
@@ -15,7 +15,7 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </h:head>
     <body>
-        <!--<f:event listener="{filterEventNoVisibility.check}" type="preRenderView" />-->
+        <f:event listener="#{filterEventNoVisibility.check}" type="preRenderView" />
         <div id="header">
             <ui:include src="/Components/TopBar.xhtml"></ui:include>
             <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" binding="#{exceptionBean.noVisibility}"/>     
