--- a/maven/meteocal/meteocal-web/src/main/webapp/protected/event/EventPageViewer.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/protected/event/EventPageViewer.xhtml
@@ -11,17 +11,16 @@ and open the template in the editor.
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:p="http://primefaces.org/ui">
     <h:head>
-        <title>My Event</title>
+        <title>Events Page</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </h:head>
-
     <body>
-        <f:event listener="{filterEventCreator.check}" type="preRenderView" />
+        <f:event listener="#{filterEventViewer.check}" type="preRenderView" />
         <div id="header">
             <ui:include src="/Components/TopBar.xhtml">
             </ui:include>
         </div>
-        <p:fieldset legend="Your Event " toggleable="true" toggleSpeed="500">
+        <p:fieldset legend="Event " toggleable="true" toggleSpeed="500">
             <p:ajax event="toggle" />
             <h:panelGrid columns="2" cellpadding="5">
                 <h:outputText value="Here there are all the available informations as far as an event concerns. ">
@@ -53,21 +52,9 @@ and open the template in the editor.
 
                         <h:outputText value="Private" />
                         <h:outputText value="Y/N" />
-
-                        <p:commandButton value="Edit" icon="ui-icon-check" action="/protected/event/EventEdit"/>
-
-
                     </h:panelGrid>
                 </h:form>
             </h:panelGrid>
         </p:fieldset>
-        <p:fieldset>
-            <h:form>
-                <p:inputText value="Participants"></p:inputText>
-                <p:commandButton action="#{eventCreatorBean.addParticipant}" value="add 
-                                 Participant"></p:commandButton>
-            </h:form>
-        </p:fieldset>
     </body>
-
 </html>
