filters with a problem

--- a/maven/meteocal/meteocal-web/src/main/webapp/Error.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/Error.xhtml
@@ -7,7 +7,6 @@ and open the template in the editor.
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:p="http://primefaces.org/ui">
     <h:head>
         <title>Error Page</title>
@@ -16,7 +15,7 @@ and open the template in the editor.
     <body>
         <div id="header">
             <p:message severity="fatal">
-                An error occured, please contact the system admins.
+                Something Wrong.
             </p:message>
         </div>
     </body>
