--- a/maven/meteocal/meteocal-web/src/main/webapp/protected/personal/ManageEvents.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/protected/personal/ManageEvents.xhtml
@@ -38,7 +38,7 @@ and open the template in the editor.
                 </p:column>
 
                 <p:column headerText="Country">
-                    <h:outputText value="#{event.color}" />
+                    <h:outputText value="#{event.country}" />
                 </p:column>
                 
                 <p:column headerText="Description">
@@ -58,7 +58,7 @@ and open the template in the editor.
                 </p:column>
                 
                 <p:column headerText="Private">
-                    <h:outputText value="#{event.isPrivate}" />
+                    <h:outputText value="#{event.privateEvent}" />
                 </p:column>
 
                 <p:column headerText="Status">
