more views with beans, not tested yet due to the glassfish mistakes...

--- a/maven/meteocal/meteocal-web/src/main/webapp/protected/SearchResults.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/protected/SearchResults.xhtml
@@ -9,8 +9,30 @@ and open the template in the editor.
     <head>
         <title>TODO supply a title</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <style type="text/css">
+            #left{
+                width: 45%;
+                position:relative;
+                float:left;
+            }    
+            #right{
+                width: 45%;
+                position:relative;
+                float:left;
+            }        
+            #container{
+                text-align: center;
+            }
+        </style>
     </head>
     <body>
-        <div>TODO write content</div>
+        <div id="container">
+            <div id="left">
+
+            </div>
+            <div id="right">
+
+            </div>
+        </div>
     </body>
 </html>
