--- a/maven/meteocal/meteocal-web/src/main/webapp/protected/event/EventPageCreator.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/protected/event/EventPageCreator.xhtml
@@ -31,25 +31,25 @@ and open the template in the editor.
                 <h:form id="form">
                     <h:panelGrid columns="2">
                         <h:outputText value="ID" />
-                        <h:outputText value="num" />
+                        <h:outputText value="#{eventCreatorBean.id}" />
 
                         <h:outputText value="Name" />
-                        <h:outputText value="nome" />
+                        <h:outputText value="#{eventCreatorBean.name}" />
 
                         <h:outputText value="Address" />
-                        <h:outputText value="road ... , n" />
+                        <h:outputText value="#{eventCreatorBean.address}" />
 
                         <h:outputText value="City" />
-                        <h:outputText value="città" />
+                        <h:outputText value="#{eventCreatorBean.city}" />
 
                         <h:outputText value="Country" />
-                        <h:outputText value="paese" />
+                        <h:outputText value="#{eventCreatorBean.country}" />
 
                         <h:outputText value="Dwscription" />
-                        <h:outputText value="testo descrittivo" />
+                        <h:outputText value="#{eventCreatorBean.description}" />
 
                         <h:outputText value="Indoor" />
-                        <h:outputText value="Y/N" />
+                        <h:outputText value="#{eventCreatorBean.indoor}" />
 
                         <h:outputText value="Private" />
                         <h:outputText value="Y/N" />
