--- a/maven/meteocal/meteocal-web/src/main/webapp/protected/event/EventPageNoVisibility.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/protected/event/EventPageNoVisibility.xhtml
@@ -18,7 +18,7 @@ and open the template in the editor.
         <f:event listener="#{filterEventNoVisibility.check}" type="preRenderView" />
         <div id="header">
             <ui:include src="/Components/TopBar.xhtml"></ui:include>
-            <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" binding="#{exceptionBean.noVisibility}"/>     
         </div>
+        NO VISIBILITY!! A A A 
     </body>
 </html>
