--- a/maven/meteocal/meteocal-web/src/main/webapp/protected/personal/HomeCalendarDay.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/protected/personal/HomeCalendarDay.xhtml
@@ -7,19 +7,33 @@ and open the template in the editor.
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:p="http://primefaces.org/ui">
     <h:head>
-        <title>HomeCalendar | Daily </title>
+        <title>Home Calendar | Monthly</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <link type="text/css" rel="stylesheet"
+              href="#{request.contextPath}/Resources/css/style.css" />
     </h:head>
-    <body>        
-        <!--<div id="header">
+    <body style="text-align: center">
+        <div id="header">
             <ui:include src="/Components/TopBar.xhtml"></ui:include>
-        </div>-->
+        </div>
         <div id="wrapper" style="text-align: center ; width: 95%">
-            <p:schedule value="#{homeMonthlyBean.visibleEvents}" draggable="false" leftHeaderTemplate="prev,next,today" rightHeaderTemplate="prevYear,nextYear" view="agendaDay"  style="width: 90% ; margin:auto;" />
+            <p:tabMenu activeIndex="2">
+                <p:menuitem value="Monthly" outcome="/protected/personal/HomeCalendarMonth.xhtml" icon="ui-icon-star">
+                    <f:param name="i" value="0" />
+                </p:menuitem>
+                <p:menuitem value="Weekly" outcome="/protected/personal/HomeCalendarWeek.xhtml" icon="ui-icon-search">
+                    <f:param name="i" value="1" />
+                </p:menuitem>
+                <p:menuitem value="Daily" outcome="/protected/personal/HomeCalendarDay.xhtml" icon="ui-icon-document">
+                    <f:param name="i" value="2" />
+                </p:menuitem>
+            </p:tabMenu>
+            <p:schedule value="#{homeMonthlyBean.visibleEvents}" draggable="false" leftHeaderTemplate="prev,next,today" rightHeaderTemplate="prevYear,nextYear"  style="width: 90% ; margin:auto; height: 800px" />
+            <p:ajax event="eventSelect" listener="#{homeMonthlyBean.onEventSelect}"></p:ajax>
         </div>
 
     </body>
