--- a/maven/meteocal/meteocal-web/src/main/webapp/protected/personal/Settings.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/protected/personal/Settings.xhtml
@@ -8,11 +8,15 @@ and open the template in the editor.
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:f="http://java.sun.com/jsf/core"
       xmlns:p="http://primefaces.org/ui">
     <h:head>
         <title>Settings View</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <style>
+            #main{
+                text-align: center;
+            }
+        </style>
     </h:head>
     <body>
         <div id="header">
