--- a/maven/meteocal/meteocal-web/src/main/webapp/protected/user/UserCalendarWeekly.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/protected/user/UserCalendarWeekly.xhtml
@@ -5,14 +5,12 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://java.sun.com/jsf/core">
-    <h:head>
-        <title>Events Page</title>
+<html xmlns="http://www.w3.org/1999/xhtml">
+    <head>
+        <title>TODO supply a title</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    </h:head>
+    </head>
     <body>
-        <f:event listener="#{filterEvent.check}" type="preRenderView" />
+        <div>TODO write content</div>
     </body>
 </html>
