before global restart for a strange problem

--- a/maven/meteocal/meteocal-web/src/main/webapp/protected/event/EventPageNoVisibility.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/protected/event/EventPageNoVisibility.xhtml
@@ -8,8 +8,7 @@ and open the template in the editor.
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:ui="http://java.sun.com/jsf/facelets">
     <h:head>
         <title>Private Event</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -19,6 +18,6 @@ and open the template in the editor.
         <div id="header">
             <ui:include src="/Components/TopBar.xhtml"></ui:include>
         </div>
-        NO VISIBILITY!! A A A 
+        For this event was assigned a private profile.
     </body>
 </html>
