--- a/maven/meteocal/meteocal-web/src/main/webapp/protected/personal/HomeCalendarDay.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/protected/personal/HomeCalendarDay.xhtml
@@ -33,7 +33,7 @@ and open the template in the editor.
                 </p:menuitem>
             </p:tabMenu>
             <p:schedule value="#{homeMonthlyBean.visibleEvents}" draggable="false" leftHeaderTemplate="prev,next,today" rightHeaderTemplate="prevYear,nextYear"  style="width: 90% ; margin:auto; height: 800px" />
-            <p:ajax event="eventSelect" listener="#{homeMonthlyBean.onEventSelect}"></p:ajax>
+            <p:ajax event="eventSelect" listener="#{listener.onEventSelect}"></p:ajax>
         </div>
 
     </body>
